Fix #367: Integration tests uses properties files instead of environment variables.
Integration tests were setting testcontainer connection details via
environment variables (FORAGE_JMS_BROKER_URL, FORAGE_JDBC_URL, etc.),
which bypassed the actual properties file loading mechanism
(ConfigSourceFactory) that real users experience. This meant tests
could pass even when properties file loading was broken.