@@ -1,9 +1,11 @@
 package io.kaoto.forage.jms;
 
-import java.util.Collections;
+import java.util.Map;
 import java.util.function.Consumer;
+import java.util.regex.Matcher;
 import org.citrusframework.annotations.CitrusTest;
 import org.citrusframework.junit.jupiter.CitrusSupport;
+import org.citrusframework.spi.Resource;
 import org.eclipse.microprofile.config.ConfigProvider;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -14,6 +16,7 @@ import org.testcontainers.utility.DockerImageName;
 import io.kaoto.forage.integration.tests.ForageIntegrationTest;
 import io.kaoto.forage.integration.tests.ForageTestCaseRunner;
 import io.kaoto.forage.integration.tests.IntegrationTestSetupExtension;
+import io.kaoto.forage.integration.tests.PropertiesTemplateHelper;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -37,11 +40,22 @@ public class JmsArtemisTest implements ForageIntegrationTest {
 
     @Override
     public String runBeforeAll(ForageTestCaseRunner runner, Consumer<AutoCloseable> afterAll) {
-        // running jbang forage run with required resources and required runtime
-        runner.when(forageRun(INTEGRATION_NAME, "forage-connectionfactory.properties", "route-artemis.camel.yaml")
-                .dumpIntegrationOutput(true)
-                .withEnvs(Collections.singletonMap(
-                        "FORAGE_JMS_BROKER_URL", "tcp://" + artemis.getHost() + ":" + artemis.getMappedPort(61616))));
+        // Load template properties and replace testcontainer-specific values
+        String brokerUrl = "tcp://" + artemis.getHost() + ":" + artemis.getMappedPort(61616);
+        Resource dynamicProperties = PropertiesTemplateHelper.createFromTemplate(
+                classResource("forage-connectionfactory.properties.template"),
+                Map.of(
+                        "forage\\.jms\\.broker\\.url=.*",
+                        Matcher.quoteReplacement("forage.jms.broker.url=" + brokerUrl)),
+                afterAll);
+
+        // running jbang forage run with dynamically modified properties
+        runner.when(camel().jbang()
+                .custom("forage", "run")
+                .processName(INTEGRATION_NAME)
+                .addResource(dynamicProperties)
+                .addResource(classResource("route-artemis.camel.yaml"))
+                .dumpIntegrationOutput(true));
 
         return INTEGRATION_NAME;
     }
